# ts-processing

./: LICENSE  README.md  pyproject.toml
data/: simple_synthetic_dataset_for_learning.csv
data_generation/: old_code.py  simple_synthetic_data.py
notebooks/: 1_time_series_exploration.ipynb  2_ts_forecasting.ipynb  2_ts_preprocessing.ipynb  3_ts_forecasting.ipynb  4_ts_classification.ipynb
