[tool.poetry]
name = "ts-processing"
version = "0.1.0"
description = ""
authors = ["Dreamlone <mik.sarafanov@gmail.com>"]
readme = "README.md"
packages = [{include = "ts_processing"}]

[tool.poetry.dependencies]
python = "==3.10.*"
jupyterlab = "^4.4.9"
matplotlib = "^3.10.7"
pandas = "^2.3.3"
ipywidgets = "^8.1.7"
statsmodels = "^0.14.5"
pywavelets = "<1.9"
pyts = "^0.13.0"
numpy = "<2.0"
scipy = ">=1.10,<1.13"
scikit-learn = ">=1.0,<1.4"
pmdarima = "<2.0"
autots = "^0.6.21"
fedot = "^0.7.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
